fix: normalize direct source declarations